tests/ui/structs/ident-from-macro-expansion.stderr
error[E0609]: no field `y` on type `Foo`
  --> $DIR/ident-from-macro-expansion.rs:17:16
   |
LL |         $expr.$ident
   |               ------ due to this macro variable
...
LL |     access!(k, y);
   |                ^ unknown field
   |
   = note: available field is: `inner`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0609`.
